# meta_writing

./: .gitignore  CLAUDE.md  TODOS.md  _planner_result.json  _planner_result_ch2.json  _planner_result_ch3.json  _planner_result_ch4.json  _planner_result_ch5.json  auto_runner.py  auto_runner_log.md  expand_ch3.py  expand_ch5.py  gen_ch4.py  gen_ch5.py  learned_rules.md  plan_ch5.py  pyproject.toml  rewrite_ch3.py  run_chapter.py  skills_novel-writing-expert-v2.md  会话记录_2026-03-26_28.md
chapters/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md
meta_writing/: __init__.py  cli.py  llm.py  negative_examples.py  orchestrator.py  style_linter.py
meta_writing/agents/: __init__.py  continuity.py  planner.py  style.py  theme.py  writer.py
meta_writing/story_bible/: __init__.py  compressor.py  loader.py  schema.py
meta_writing/vector_store/: __init__.py  store.py
scripts/: editorial_pass.py
story_data/: foreshadowing.yaml  pacing.yaml  story_core.example.yaml  story_core.yaml  timeline.yaml  world_rules.yaml
story_data/chapter_summaries/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml
story_data/characters/: character.example.yaml  liang_shu.yaml  wen_ye.yaml  xia_fu.yaml  夏浮.yaml  林越.yaml  梁书.yaml  (+1 more)
tests/: conftest.py  test_continuity.py  test_orchestrator.py  test_planner.py  test_story_bible.py  test_style_linter.py  test_vector_store.py  test_writer.py
